# Calculator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: grammarHandbook.md
src/: atomic_mass.cc  basic_math.cc  handlelib.cc  main.cc  main.cpp  message_lib.cc  script_exec.cc
src/include/: atomicMass.hpp  atomic_mass.h  basicMath.hpp  basic_math.h  calc.hpp  calculator.h  evalComparison.hpp  eval_comparison.h  handlelib.h  message_lib.h  parse_operand.h  scriptExec.hpp  script_exec.h  shellgui.hpp  version.h  version.hpp
